feat: update pics

--- a/mount/keycloak/theme/keycloak.v2/login/resources/css/styles.css
+++ b/mount/keycloak/theme/keycloak.v2/login/resources/css/styles.css
@@ -140,7 +140,7 @@ div.kc-logo-text span {
 }
 
 .pf-v5-c-button.pf-m-primary {
-  background-color: #1d77fe;
+  background-color: rgb(148, 197, 24);
   border-radius: 0;
   cursor: pointer;
 }
